[project]
authors = [
    { name = "Kelly Christensen", email = "kelly.christensen@sciencespo.fr" },
]
dependencies = [
    "annotated-types==0.5.0",
    "blis==0.7.10",
    "casanova==1.15.1",
    "catalogue==2.0.9",
    "certifi==2023.7.22",
    "charset-normalizer==3.2.0",
    "click==8.1.7",
    "confection==0.1.1",
    "cymem==2.0.7",
    "ebbe==1.13.2",
    "emoji==2.8.0",
    "file-read-backwards==2.0.0",
    "filelock==3.12.3",
    "idna==3.4",
    "Jinja2==3.1.2",
    "joblib==1.3.2",
    "langcodes==3.3.0",
    "lxml==4.9.3",
    "MarkupSafe==2.1.3",
    "mpmath==1.3.0",
    "murmurhash==1.0.9",
    "networkx==3.1",
    "nltk==3.8.1",
    "numpy==1.25.2",
    "packaging==23.1",
    "pathy==0.10.2",
    "preshed==3.0.8",
    "protobuf==4.24.2",
    "pydantic==2.3.0",
    "pydantic_core==2.6.3",
    "regex==2023.8.8",
    "requests==2.31.0",
    "six==1.16.0",
    "smart-open==6.3.0",
    "spacy==3.6.1",
    "spacy-conll==3.4.0",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.4",
    "spacy-stanza==1.0.3",
    "srsly==2.4.7",
    "stanza==1.5.0",
    "sympy==1.12",
    "thinc==8.1.12",
    "torch==2.0.1",
    "tqdm==4.66.1",
    "typer==0.9.0",
    "typing_extensions==4.7.1",
    "ural==1.1.0",
    "urllib3==2.0.4",
    "wasabi==1.1.2",
    "hopsparser @ git+ssh://git@github.com/kat-kel/hopsparser.git",
    "hopsparser[spacy]",
    "fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.6.0/fr_core_news_lg-3.6.0-py3-none-any.whl#sha256=3858ac2323d2c0fcd1fb2ef25325cfc7da2797a9501dad1c6b676bc779a1c257",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0-py3-none-any.whl#sha256=9012584a8fcf5bc61bedb13a4b511fb81ffff9f770958ee06366671be10632e9",
]
description = "Tools for dependency parsing"
keywords = ["nlp", "parsing"]
license = { text = "MIT" }
name = "keyfayqua"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"


[project.scripts]
keyfayqua = "src.main:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"